[tool.poetry]
name = "python-algo"
version = "0.1.0"
description = ""
authors = ["psick22 <kgirok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
